			       =================
				BOGOFILTER NEWS
			       =================

NOTE: More information on important changes for bogofilters updaters
is in the RELEASE.NOTES files.  Read it!!

If updating from a bogofilter version older than 0.15.4, it's a good
idea to retrain or else use the '-H' (header tag degeneration) option.

0.15.8	2003-10-29

	* Print "X-Bogosity" line when "-t" is used alone.
	* Modified handling of mime attachments to decode rfc822 and
	  to discard applications and images.

	2003-10-27

	* Change bogoupgrade back to using 2 arg open for perl-5.6
          compatibility.

	2003-10-26

	* Added man page for bogotune.

	2003-10-23

	* Initial release of faster, C language version of bogotune.

	2003-10-21

	* Configure script modified to better detect BerkeleyDB libs.
	* Makefile modified to build bogolexer and bogoutil with fewer
	  shared libs.

	2003-10-19

	* Added decoding of percent escaped characters in URLs.

	2003-10-16

	* English and french versions of bogofilter-faq.html revised.
	* Tuning script doc/bogotune rewritten as C program.

	2003-10-15

	* Fix build problem in doc directory.
	* Refactored source code so bogolexer will build without
          datastore code.

	2003-10-14

	* Fix initialization problem that prevents reading more than
          one msg-count file.
	* Initialize wordhash storage.

0.15.7	2003-10-13

	* Include all tokens in bogoutil dump output (unless in
	  maintenance mode).

	2003-10-08

	* Disable header line tagging when processing msg-count files.

	2003-10-06

	* Added decoding of escaped characters in html.
	* Revised mailbox processing so type recognition is now
	  table driven.
	* Added support for ANT mailboxes.
	* Made portability changes for OS/2 and RISC-OS

0.15.6	2003-10-02

	* Fixed problem in bogoupgrade.
	* Revised configure.ac to remove GLIBC-2.3 dependency and
          include info for DOS-ish file in config.h.

	2003-10-01

	* Bogofilter can now use GSL 1.0 to 1.3 as well as 1.4.